Fixed problem with site jumping on small width screens

--- a/index.css
+++ b/index.css
@@ -15,6 +15,8 @@ body {
   background: white;
   box-shadow: 2px 2px 15px 0px rgba(50, 50, 50, 0.75);
   min-height: 100vh;
+  overflow: hidden !important;
+  text-align: left;
   font: 11pt/1.6 'Open Sans', Verdana, Arial, sans-serif;
 }
 
@@ -93,12 +95,6 @@ hr {
 }
 
 /* Header and footer css */
-body {
-  text-align: left;
-  overflow: auto;
-  font: 11pt/1.6 'Open Sans', Verdana, Arial, sans-serif;
-}
-
 a {
   color: green;
 }
